--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "vinyl-ftp": "^0.6.1"
   },
   "dependencies": {
-    "sass": "^1.56.0"
+    "gulp-data": "^1.3.1",
+    "gulp-html-prettify": "^0.0.1",
+    "sass": "^1.56.0",
+    "through2": "^4.0.2"
   }
 }
