--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "gulp-data": "^1.3.1",
+    "gulp-debug": "^5.0.1",
     "gulp-html-prettify": "^0.0.1",
     "sass": "^1.56.0",
     "through2": "^4.0.2"
