--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vinyl-ftp": "^0.6.1"
   },
   "dependencies": {
+    "files-exist": "^1.1.0",
     "gulp-data": "^1.3.1",
     "gulp-debug": "^5.0.1",
     "gulp-html-prettify": "^0.0.1",
