--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "files-exist": "^1.1.0",
     "gulp-data": "^1.3.1",
     "gulp-debug": "^5.0.1",
+    "gulp-dotenv": "^0.2.2",
     "gulp-html-prettify": "^0.0.1",
+    "gulp-insert": "^0.5.0",
+    "gulp-rename": "^2.0.0",
     "sass": "^1.56.0",
     "through2": "^4.0.2"
   }
